tests/baselines/reference/parserParameterList17.errors.txt
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList17.ts(2,4): error TS2394: This overload signature is not compatible with its implementation signature.
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList17.ts(2,16): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList17.ts (2 errors) ====
    class C {
       constructor(a = 4);
       ~~~~~~~~~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList17.ts:3:4: The implementation signature is declared here.
                   ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
       constructor(a, b) { }
    }